# etftp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
.github/workflows/: pipeline.yml
include/: client.hpp  file_receiver.hpp  file_sender.hpp  frame.hpp  frame_checker.hpp  frame_viewer.hpp  inmessage.hpp  listener.hpp  options_handler.hpp  settings.hpp  tftp.hpp  tftp_server.hpp  tftp_server_runner.hpp
src/: main.cc
tests/: CMakeLists.txt  basic_test.cc
